infra/k8s/ocr-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-worker
  namespace: invoice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocr-worker
  template:
    metadata:
      labels:
        app: ocr-worker
    spec:
      containers:
        - name: ocr-worker
          image: invoice-app-ocr:latest
          imagePullPolicy: IfNotPresent
          command: ["python","-m","workers.ocr_consumer"]
