infra/k8s/kafka-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: invoice-app
spec:
  selector:
    app: kafka
  ports:
    - name: broker
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: invoice-app
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          ports:
            - containerPort: 9092
              name: broker
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka/data
          readinessProbe:
            exec:
              command: ["/bin/bash","-lc","kafka-topics --bootstrap-server localhost:9092 --list | cat"]
            initialDelaySeconds: 15
            periodSeconds: 15
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
