infra/k8s/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-master
  namespace: invoice-app
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: postgres-master
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-master
  namespace: invoice-app
spec:
  selector:
    matchLabels:
      app: postgres-master
  serviceName: postgres-master
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-master
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
          livenessProbe:
            exec:
              command: ["/bin/sh","-c","pg_isready -U $POSTGRES_USER"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["/bin/sh","-c","pg_isready -U $POSTGRES_USER"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: init-sql
          configMap:
            name: postgres-init-sql
            items:
              - key: init-master-postgres.sql
                path: init-master-postgres.sql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
